# weather

./: Cargo.toml  Dockerfile  README.md
src/: main.rs  requests.rs
src/temp_call/: forecast.rs  mod.rs  openweather.rs  temperature.rs  weatherbit.rs
src/tests/: mod.rs  openweatherapi_test.rs  temp_call_test.rs  weatherbitapi_test.rs
src/tests/fixtures/: ow_forecast.json  wb_forecast.json
